--- a/EqUiWebUi/Views/Gadata/StoWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/StoWebgrid.cshtml
@@ -123,6 +123,7 @@
 }).WithPaging(20).Sortable(true)
 </div>
 
+@*footer modal with filter and gohome*@
 <div class="modal-content">
     <div class="dropdown">
         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
@@ -132,11 +133,13 @@
         <ul class="dropdown-menu">
             <li><a href="/Gadata/StoWebgrid">ClearFilter</a></li>
             <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__GA1">GA1</a></li>
-            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 334">FF-334</a></li>
-            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 331">FS-331</a></li>
-            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 336">RF-336</a></li>
-            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 338">MAR-338</a></li>
-            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 339">WBL-339</a></li>
+            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 33">-FLOOR</a></li>
+            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 334">--FF-334</a></li>
+            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 331">--FS-331</a></li>
+            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 336">--RF-336</a></li>
+            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 338">--MAR-338</a></li>
+            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 339">--WBL-339</a></li>
+            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 35">-SIDES</a></li>
         </ul>
 
         <a href="~/" class="btn btn-primary">goHome &raquo;</a>
