integration of tableau

--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
     <p><a href="~/Gadata/Stowebgrid" class="btn btn-primary btn-sm">STO &raquo;</a></p>
     <p><a href="~/Difftable/Index" class="btn btn-primary btn-sm">QueryDiffer &raquo;</a></p>
     <p><a href="~/Dynamic/DynamicWebgrid" class="btn btn-primary btn-sm">Dynamic &raquo;</a></p>
+    <p><a href="~/Tableau/index" class="btn btn-primary btn-sm">Tableau &raquo;</a></p>
     <div></div>
     <p><a href="~/Sharepoint/AddNewIusse?location=TestLocation&title=TestTitle&refURL=http://MyServer/sites/MySiteCollection" class="btn btn-primary btn-sm">SharepointTest &raquo;</a></p>
    
