--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -1,6 +1,38 @@
-﻿<h2>Webviews tableau (data update gebeurd nog NIET automatisch)</h2>
+﻿
 
-<div></div>
-<p><a href="~/tableau/LongTerm_Layout_STO_NGAC" class="btn btn-primary btn-sm">LongTerm_Layout_STO_NGAC &raquo;</a></p>
-<p><a href="~/tableau/LongTerm_Treemap_STO_NGAC" class="btn btn-primary btn-sm">LongTerm_Treemap_STO_NGAC &raquo;</a></p>
-<p><a href="~/tableau/LongTerm_Layout_STW040_MAXIMO" class="btn btn-primary btn-sm">LongTerm_Layout_STW040_MAXIMO &raquo;</a></p>
+<div class="container body-content">
+    <div class="jumbotron">
+        <h2>Webviews tableau (data update gebeurd nog NIET automatisch)</h2>
+    </div>
+
+        <div class="panel panel-default">
+            <h4>Desktop computers (max full HD)</h4>
+            <div class="panel-body">
+                <p><a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbeddedV1&sheet=ErrorLayoutDashboard" class="btn btn-primary btn-sm">LongTerm_Layout_STO_NGAC &raquo;</a>
+                Bollen op layout data van STO (plc) en NGAC (abb robots)</p>
+                <p><a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbeddedV1&sheet=ErrorTreeLayoutDashboard" class="btn btn-primary btn-sm">LongTerm_Treemap_STO_NGAC &raquo;</a>
+                Boommap data van STO (plc) en NGAC (abb robots) een top oneindig visualisatie</p>
+                <p><a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbeddedV1&sheet=STW040_MAXIMO_LayoutDasboard" class="btn btn-primary btn-sm">LongTerm_Layout_STW040_MAXIMO &raquo;</a>
+                Bollen op layout data van STW040 en MAXIMO (ci)</p>
+            </div>
+        </div>
+
+        <p></p>
+
+
+    <div class="panel panel-default">
+        <h4>4K Digiborden (max ultra HD)</h4>
+        <div class="panel-body">
+            <p>
+                <a href="~/tableau/Embedded4K?workbook=4K-digibord-V10&sheet=ErrorLayoutDashboard" class="btn btn-primary btn-sm">4K LongTerm_Layout_STO_NGAC &raquo;</a>
+                Bollen op layout data van STO (plc) en NGAC (abb robots)
+            </p>
+            
+            <p>
+                <a href="~/tableau/Embedded4K?workbook=4K-digibord-V10&sheet=ErrorTreeLayoutDashboard" class="btn btn-primary btn-sm">4K LongTerm_Treemap_STO_NGAC &raquo;</a>
+                Boommap data van STO (plc) en NGAC (abb robots) een top oneindig visualisatie
+            </p>
+        </div>
+    </div>
+
+</div>
