--- a/EqUiWebUi/Views/Home/About.cshtml
+++ b/EqUiWebUi/Views/Home/About.cshtml
@@ -1,7 +1,35 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿<div class="container body-content">
+    <div class="jumbotron">
+        <h2>We work best with Chrome!</h2>
+        <p><a href="https://www.google.com/chrome/browser/desktop/index.html" class="btn btn-primary btn-sm">Chromeinstal &raquo;</a></p>
 
-<p>Use this area to provide additional information.</p>
+
+        <h2>For optimal use you should install these chrome extensions.</h2>
+        <p></p>
+        <div>
+            <h3>ClickOnce for Google Chrome</h3>
+            <p>
+                <a href="https://chrome.google.com/webstore/detail/clickonce-for-google-chro/kekahkplibinaibelipdcikofmedafmb" class="btn btn-primary btn-sm">ClickOnce for Google Chrome &raquo;</a>
+                Needed to launch the VSTO click once tools in the chrome browser
+            </p>
+
+        </div>
+
+        <div>
+            <h3>SingelTab zoom</h3>
+            <p>
+                <a href="https://chrome.google.com/webstore/detail/single-tab-zoom/palhkglkelpleoalemmjdhbdckkikjmo" class="btn btn-primary btn-sm">SingleTabZoom &raquo;</a>
+                Allows the to change zoom level tab by tab (important for multi screen setups)
+            </p>
+        </div>
+
+        <div>
+            <h3>Multi Layout Manager zoom</h3>
+            <p>
+                <a href="https://chrome.google.com/webstore/detail/multi-layout-manager/ijpiffheldgmdkbaohoilabdnmeinand" class="btn btn-primary btn-sm">Multi Layout Manager &raquo;</a>
+                Allows to save and restore a screenlayout (important for multi screen setups)
+            </p>
+        </div>
+    </div>
+</div>
+
