--- a/EqUiWebUi/Views/Home/Contact.cshtml
+++ b/EqUiWebUi/Views/Home/Contact.cshtml
@@ -1,17 +1,22 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    Volvo Cars Gent<br />
-    <abbr title="Phone">P:</abbr>
-    09 250 30 69
-</address>
+<div class="container body-content">
+    <div class="jumbotron">
+        <h2>@ViewBag.Title.</h2>
+        <h3>@ViewBag.Message</h3>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">sam.de.beul@volvocars.com</a><br />
-</address>
+        <address>
+            Volvo Cars Gent<br />
+            <abbr title="Phone">P:</abbr>
+            09 250 30 69
+        </address>
 
-<p><a href="~/Hangfire" class="btn btn-primary btn-sm">Hangfire &raquo;</a></p>
+        <address>
+            <strong>Support:</strong>   <a href="mailto:Support@example.com">sam.de.beul@volvocars.com</a><br />
+        </address>
+
+        <p><a href="~/Hangfire" class="btn btn-primary btn-sm">Hangfire &raquo;</a></p>
+    </div>
+</div>
