cleanup and tableau autoSize

--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -27,8 +27,19 @@
             Huidige elektrode status inclusief een voorspelling van het aantal nog te lassen wagens</p>
             <p><a href="~/Gadata/Stowebgrid" class="btn btn-primary btn-sm">STO &raquo;</a>
             Data van de PLC actieve storingen</p>
-            <p><a href="~/Tableau/index" class="btn btn-primary btn-sm">Tableau &raquo;</a>
-            Een interactive manier om naar data te kijken.</p>
+
+        </div>
+    </div>
+
+    <p></p>
+
+    <div class="panel panel-default">
+        <h4>Tableau</h4>
+        <div class="panel-body">
+            <p>
+                <a href="~/Tableau/index" class="btn btn-primary btn-sm">Tableau &raquo;</a>
+                Een interactive manier om naar data te kijken.
+            </p>
         </div>
     </div>
 
