--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -2,18 +2,43 @@
 
 <div class="container body-content">
     <div class="jumbotron">
-        <h2>Webviews tableau (data update gebeurd nog NIET automatisch)</h2>
+        <h2>Webviews tableau</h2>
+        <h5>(data update gebeurd nog NIET automatisch)</h5>
+        <h5>(gebruik user: e6308159 pw: e6308159 om in te loggen in tableau)</h5>
     </div>
 
         <div class="panel panel-default">
             <h4>Desktop computers (max full HD)</h4>
             <div class="panel-body">
-                <p><a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbeddedV1&sheet=ErrorLayoutDashboard" class="btn btn-primary btn-sm">LongTerm_Layout_STO_NGAC &raquo;</a>
-                Bollen op layout data van STO (plc) en NGAC (abb robots)</p>
-                <p><a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbeddedV1&sheet=ErrorTreeLayoutDashboard" class="btn btn-primary btn-sm">LongTerm_Treemap_STO_NGAC &raquo;</a>
-                Boommap data van STO (plc) en NGAC (abb robots) een top oneindig visualisatie</p>
-                <p><a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbeddedV1&sheet=STW040_MAXIMO_LayoutDasboard" class="btn btn-primary btn-sm">LongTerm_Layout_STW040_MAXIMO &raquo;</a>
-                Bollen op layout data van STW040 en MAXIMO (ci)</p>
+                
+                <p>
+                    <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_ErrorStoNgac&sheet=ErrorLayoutDashboard" class="btn btn-primary btn-sm">LongTerm_Layout_STO_NGAC &raquo;</a>
+                    Bollen op layout data van STO (plc) en NGAC (abb robots)
+                </p>
+                
+                <p><a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_ErrorStoNgac&sheet=ErrorTreeLayoutDashboard" class="btn btn-primary btn-sm">LongTerm_Treemap_STO_NGAC &raquo;</a>
+                    Boommap data van STO (plc) en NGAC (abb robots) een top oneindig visualisatie</p>
+                
+                <p>
+                    <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_MaximoStw040&sheet=Dash_MaximoStw040" class="btn btn-primary btn-sm">LongTerm_Layout_STW040_MAXIMO &raquo;</a>
+                    Bollen op layout data van STW040 en MAXIMO (ci)
+                </p>
+                
+                <p>
+                    <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=Dash_Layout_Breakdown" class="btn btn-primary btn-sm">LongTerm_Layout_VCSC &raquo;</a>
+                    Bollen op layout data van VCSC (comau c3g & c4g)
+                </p>
+
+                <p>
+                    <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=Dash_Tree_Breakdown" class="btn btn-primary btn-sm">LongTerm_Treemap_VCSC &raquo;</a>
+                    Boommap data van VCSC (comau c3g & c4g) een top oneindig visualisatie
+                </p>
+
+                <p>
+                    <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=AssetLayoutDashboard" class="btn btn-primary btn-sm">AssetLayout &raquo;</a>
+                    Layout assets (om te zien of alles gemapt is)
+                </p>
+
             </div>
         </div>
 
