--- a/EqUiWebUi/Views/Tableau/Embedded4K.cshtml
+++ b/EqUiWebUi/Views/Tableau/Embedded4K.cshtml
@@ -32,14 +32,15 @@
 
         /**
          * Finds the correct size of the dashboard in this screen.
+        https://en.wikipedia.org/wiki/Display_resolution#/media/File:Vector_Video_Standards8.svg
          */
         function findDashboardSize() {
-            var minHeight = 1600;
-            var maxHeight =  2160;
+            var minHeight = 2160;
+            var maxHeight = 2160; 
             var minWidth = 2560;
 
             // The minus 100px leaves us room for the header/footer. Adjust as needed.
-            var height = $('body').height() - 50;
+            var height = window.innerHeight - 130;
 
             if (height < minHeight) {
                 height = minHeight;
@@ -49,12 +50,12 @@
             }
 
             // var width = Math.round(height / (minHeight / minWidth));
-            var width = $('body').width();
+            var width = window.innerWidth - 20;
             if (width < minWidth) {
                 width = minWidth;
             }
 
-            console.log("Resize: Body:", $('body').height(), "x", $('body').width(), " viz:", height, " x", width);
+            console.log("Resize: Body:", window.innerHeight, "x", window.innerWidth, " viz:", height, " x", width);
 
             return {
                 'width': width,
@@ -79,6 +80,8 @@
          * Hook into the window resize event to resize when the user resizes the screen.
          */
         $(window).resize(resize);
+        /*trigger once on load ready*/
+        //$(document).ready(resize);
 
 
     </script>
@@ -86,6 +89,7 @@
 <body>
     @*<h6>Workbook: @ViewBag.workbook Sheet: @ViewBag.sheet</h6>*@
     @*render the viz*@
+    <p></p>
     <div id="viz"></div>
 </body>
 </html>
