--- a/EqUiWebUi/Views/Settings/Index.cshtml
+++ b/EqUiWebUi/Views/Settings/Index.cshtml
@@ -6,7 +6,10 @@
     <div class="jumbotron">
         <h2>@ViewBag.Title.</h2>
         <h3>@ViewBag.Message</h3>
-        <p><a href="~/Hangfire" class="btn btn-primary btn-sm">Hangfire &raquo;</a></p>
+        <p><a href="~/Hangfire" class="btn btn-primary btn-sm">Hangfire &raquo;</a>Beheer van background jobs. </p>
+        <p><a href="~/Settings/GetUserGrants" class="btn btn-primary btn-sm">Users &raquo;</a>Beheer van gebruikers</p>
+
+        
     </div>
 </div>
 
