--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                     @User.Identity.Name
                     </a>
                 
-                <a  href='@Url.Action("Settings", "Home")' class="nav navbar-text navbar-right">
+                <a  href='@Url.Action("Index", "Settings")' class="nav navbar-text navbar-right">
                     <img src="~/Content/images/icons8-settings-25.png" /></a>
             </div>
         </div>
