first test with other grid lib

--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -13,8 +13,10 @@
         <div class="panel-body">
             <p><a href="~/Gadata/PloegRapportWebgrid" class="btn btn-primary btn-sm">PloegRapport &raquo;</a> 
             Bevat storingen groter dan 20 minuten of die meer dan 3 keer zijn voorgevallen</p>
-            <p><a href="~/Gadata/SupervisieWebgrid" class="btn btn-primary btn-sm">Supervisie &raquo;</a>
+            <p><a href="~/Gadata/SupervisieWebgrid" class="btn btn-primary btn-sm">Supervisie Robots &raquo;</a>
             Bevat alles dat nu in storing staat, storingen die langer dan 10 minuten hebben geduurd en hardwarefouten van robots</p>
+            <p><a href="http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet/" class="btn btn-primary btn-sm">Supervisie Intranet &raquo;</a>
+            </p>
         </div>
     </div>
 
