--- a/EqUiWebUi/Views/Maximo/_woDetails.cshtml
+++ b/EqUiWebUi/Views/Maximo/_woDetails.cshtml
@@ -1,23 +1,7 @@
 ﻿@model EqUiWebUi.WebGridHelpers.DefaultModel
-
-@*Remove default layout*@
 @{
-    Layout = null;
+    ViewBag.Title = "_woDetails";
 }
-
-@{
-    ViewBag.Title = "WorkorderDetails";
-}
-
-
-<script src="~/Scripts/jquery-3.2.1.min.js"></script>
-<script src="~/Scripts/bootstrap.min.js"></script>
-<script src="~/Scripts/gridmvc.min.js"></script>
-
-<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-<link href="~/Content/Gridmvc.css" rel="stylesheet" />
-
-
 
 <div class="panel panel-default">
     <div class="panel-heading">
@@ -46,13 +30,12 @@
 
     <div class="panel-body">
         @{
-            ViewBag.Title = "Dynamic Gridview";
             WebGrid grid = new WebGrid(null, rowsPerPage: @Model.PageSize);
             grid.Bind(Model.Data, autoSortAndPage: true, rowCount: @Model.PageSize);
         }
 
         @grid.GetHtml(
-                    htmlAttributes: new { id = "gridMapping", style = "font-size: 12px" },                   
+                    htmlAttributes: new { id = "gridMapping", style = "font-size: 12px" },
                     tableStyle: "table table-striped grid-table",
                     headerStyle: "grid-header-title",
                     footerStyle: "grid-footer",
@@ -68,6 +51,10 @@
         )
     </div>
 </div>
+
+
+
+
 
 
 
