--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -57,6 +57,11 @@
                 <a href="~/tableau/Embedded4K?workbook=4K-digibord-V10&sheet=ErrorTreeLayoutDashboard" class="btn btn-primary btn-sm">4K LongTerm_Treemap_STO_NGAC &raquo;</a>
                 Boommap data van STO (plc) en NGAC (abb robots) een top oneindig visualisatie
             </p>
+
+            <p>
+                <a href="~/tableau/Embedded4K?workbook=EquiEmbedded_MaximoStw040&sheet=Dash_MaximoStw040" class="btn btn-primary btn-sm">LongTerm_Layout_STW040_MAXIMO &raquo;</a>
+                Bollen op layout data van STW040 en MAXIMO (ci) (gewoon andere wrapper gebruikt)
+            </p>
         </div>
     </div>
 
