--- a/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
@@ -1,22 +1,11 @@
 ﻿@model IEnumerable<EqUiWebUi.Models.AAOSR_PloegRaportV2_Result>
 
-@using GridMvc.Html
-
-<script src="~/Scripts/jquery-3.2.1.min.js"></script>
-<script src="~/Scripts/bootstrap.min.js"></script>
-<script src="~/Scripts/gridmvc.min.js"></script>
-
-<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-<link href="~/Content/Gridmvc.css" rel="stylesheet" />
-
-@*Remove default layout*@
-@{
-    Layout = null;
-}
 @*set title*@
 @{
     ViewBag.Title = "Ploegrapport";
 }
+
+<script src="~/Scripts/jquery-3.2.1.min.js"></script>
 
 @*script for setting row colors based on there values*@
 <script type="text/javascript">
@@ -89,24 +78,22 @@
 </script>
 
 <div class="code-cut">
-@Html.Grid(Model).Named("DataGrid").Columns(columns =>
+
+@Html.Grid(Model).Named("DataGrid").Build(columns =>
 {
-    columns.Add(c => c.Location).Filterable(true);
-    columns.Add(c => c.logtext);
+    columns.Add(c => c.Location).Titled("Location").Filterable(true);
+    columns.Add(c => c.logtext).Titled("Logtext");
     columns.Add(c => c.Response_min_).Titled("RT");
     columns.Add(c => c.Downtime_min_).Titled("DT");
-    columns.Add(c => c.Count);
-    columns.Add(c => c.time);
-    columns.Add(c => c.Subgroup);
-    columns.Add(c => c.Logtype).Filterable(true);
-
+    columns.Add(c => c.Count).Titled("Count");
+    columns.Add(c => c.time).Titled("Time");
+    columns.Add(c => c.Subgroup).Titled("Subgroup");
+    columns.Add(c => c.Logtype).Titled("Logtype").Filterable(true);
     columns.Add(c => c.LocationTree)
     .Titled("Info")
     .Encoded(false)
-    .Sanitized(false)
-    .SetWidth(30)
     .Filterable(true)
-    .RenderValueAs(o => Html.ActionLink("INFO", "_Moreinfo",
+    .RenderedAs(o => Html.ActionLink("INFO", "_Moreinfo",
        new
        {
            location = o.Location,
@@ -118,7 +105,10 @@
          new { @class = "modal-link" }
          )
     );
-}).WithPaging(20).Sortable(true)
+}).Sortable().Pageable(pager =>
+    {
+        pager.RowsPerPage = 20;
+    }).Empty("No data found")
 </div>
 
 <div class="modal-content">
@@ -129,12 +119,12 @@
         </button>
         <ul class="dropdown-menu">
             <li><a href="/Gadata/PloegRapportWebgrid">ClearFilter</a></li>
-            <li><a href="/Gadata/PloegRapportWebgrid?grid-filter=LocationTree__2__AAL">P3</a></li>
-            <li><a href="/Gadata/PloegRapportWebgrid?grid-filter=LocationTree__2__A FLOOR L">A FLOOR L</a></li>
-            <li><a href="/Gadata/PloegRapportWebgrid?grid-filter=LocationTree__2__A SIBO L">A SIBO L</a></li>
-            <li><a href="/Gadata/PloegRapportWebgrid?grid-filter=LocationTree__2__AAS">P4</a></li>
-            <li><a href="/Gadata/PloegRapportWebgrid?grid-filter=LocationTree__2__A FLOOR S">A FLOOR S</a></li>
-            <li><a href="/Gadata/PloegRapportWebgrid?grid-filter=LocationTree__2__A SIBO ">A SIBO S</a></li>
+            <li><a href="/Gadata/PloegRapportWebgrid?DataGrid-LocationTree-Contains=AAL">P3</a></li>
+            <li><a href="/Gadata/PloegRapportWebgrid?DataGrid-LocationTree-Contains=A FLOOR L">A FLOOR L</a></li>
+            <li><a href="/Gadata/PloegRapportWebgrid?DataGrid-LocationTree-Contains=A SIBO L">A SIBO L</a></li>
+            <li><a href="/Gadata/PloegRapportWebgrid?DataGrid-LocationTree-Contains=AAS">P4</a></li>
+            <li><a href="/Gadata/PloegRapportWebgrid?DataGrid-LocationTree-Contains=A FLOOR S">A FLOOR S</a></li>
+            <li><a href="/Gadata/PloegRapportWebgrid?DataGrid-LocationTree-Contains=A SIBO ">A SIBO S</a></li>
         </ul>
 
         <a href="~/" class="btn btn-primary">goHome &raquo;</a>
