--- a/EqUiWebUi/Views/Gadata/StoWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/StoWebgrid.cshtml
@@ -1,22 +1,11 @@
 ﻿@model IEnumerable<EqUiWebUi.Models.Breakdown>
 
-@using GridMvc.Html
-
-<script src="~/Scripts/jquery-3.2.1.min.js"></script>
-<script src="~/Scripts/bootstrap.min.js"></script>
-<script src="~/Scripts/gridmvc.min.js"></script>
-
-<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-<link href="~/Content/Gridmvc.css" rel="stylesheet" />
-
-@*Remove default layout*@
-@{
-    Layout = null;
-}
 @*set title*@
 @{
     ViewBag.Title = "STO breakdown";
 }
+
+<script src="~/Scripts/jquery-3.2.1.min.js"></script>
 
 @*script for setting row colors based on there values*@
 <script type="text/javascript">
@@ -91,24 +80,21 @@
 
 @*main grid*@
 <div class="code-cut">
-    @Html.Grid(Model).Named("DataGrid").Columns(columns =>
+    @Html.Grid(Model).Named("DataGrid").Build(columns =>
 {
-    columns.Add(c => c.location).Filterable(true);
-    columns.Add(c => c.Logcode);
-    columns.Add(c => c.logtext);
-    columns.Add(c => c.Downtime);
-    columns.Add(c => c.timestamp).Format("{0:hh:mm:ss}");
+    columns.Add(c => c.location).Titled("Location").Filterable(true);
+    columns.Add(c => c.Logcode).Titled("Logcode");
+    columns.Add(c => c.logtext).Titled("Logtext");
+    columns.Add(c => c.Downtime).Titled("DT");
+    columns.Add(c => c.timestamp).Titled("Time").Formatted("{0:hh:mm:ss}");
     columns.Add(c => c.Classification).Titled("Class");
-    columns.Add(c => c.Subgroup);
-    columns.Add(c => c.Logtype).Filterable(true);
-
+    columns.Add(c => c.Subgroup).Titled("Subgroup");
+    columns.Add(c => c.Logtype).Titled("Logtype").Filterable(true);
     columns.Add(c => c.LocationTree)
     .Titled("Info")
     .Encoded(false)
-    .Sanitized(false)
-    .SetWidth(30)
     .Filterable(true)
-    .RenderValueAs(o => Html.ActionLink("INFO", "_Moreinfo",
+    .RenderedAs(o => Html.ActionLink("INFO", "_Moreinfo",
        new
        {
            location = o.location,
@@ -120,7 +106,10 @@
          new { @class = "modal-link" }
          )
     );
-}).WithPaging(20).Sortable(true)
+}).Sortable().Pageable(pager =>
+    {
+    pager.RowsPerPage = 20;
+    }).Empty("No data found")
 </div>
 
 @*footer modal with filter and gohome*@
@@ -132,14 +121,14 @@
         </button>
         <ul class="dropdown-menu">
             <li><a href="/Gadata/StoWebgrid">ClearFilter</a></li>
-            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__GA1">GA1</a></li>
-            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 33">-FLOOR</a></li>
-            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 334">--FF-334</a></li>
-            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 331">--FS-331</a></li>
-            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 336">--RF-336</a></li>
-            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 338">--MAR-338</a></li>
-            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 339">--WBL-339</a></li>
-            <li><a href="/Gadata/StoWebgrid?grid-filter=LocationTree__2__A LIJN 35">-SIDES</a></li>
+            <li><a href="/Gadata/StoWebgrid?DataGrid-LocationTree-Contains=GA1">GA1</a></li>
+            <li><a href="/Gadata/StoWebgrid?DataGrid-LocationTree-Contains=A LIJN 33">-FLOOR</a></li>
+            <li><a href="/Gadata/StoWebgrid?DataGrid-LocationTree-Contains=A LIJN 334">--FF-334</a></li>
+            <li><a href="/Gadata/StoWebgrid?DataGrid-LocationTree-Contains=A LIJN 331">--FS-331</a></li>
+            <li><a href="/Gadata/StoWebgrid?DataGrid-LocationTree-Contains=A LIJN 336">--RF-336</a></li>
+            <li><a href="/Gadata/StoWebgrid?DataGrid-LocationTree-Contains=A LIJN 338">--MAR-338</a></li>
+            <li><a href="/Gadata/StoWebgrid?DataGrid-LocationTree-Contains=A LIJN 339">--WBL-339</a></li>
+            <li><a href="/Gadata/StoWebgrid?DataGrid-LocationTree-Contains=A LIJN 35">-SIDES</a></li>
         </ul>
 
         <a href="~/" class="btn btn-primary">goHome &raquo;</a>
