--- a/EqUiWebUi/Views/Gadata/TipstatusWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/TipstatusWebgrid.cshtml
@@ -1,23 +1,11 @@
 ﻿@model IEnumerable<EqUiWebUi.Models.TipMonitor>
 
-@using GridMvc.Html
-
-<script src="~/Scripts/jquery-3.2.1.min.js"></script>
-<script src="~/Scripts/bootstrap.min.js"></script>
-<script src="~/Scripts/gridmvc.min.js"></script>
-
-<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-<link href="~/Content/Gridmvc.css" rel="stylesheet" />
-
-@*Remove default layout*@
-@{
-    Layout = null;
-}
-
 @*set title*@
 @{
     ViewBag.Title = "Tipwear";
 }
+
+<script src="~/Scripts/jquery-3.2.1.min.js"></script>
 
 @*scrip for blinking a row based on there value.*@
 <script type="text/javascript">
@@ -114,26 +102,26 @@
 
 @*main grid*@
 <div class="code-cut">
-    @Html.Grid(Model).Named("DataGrid").Columns(columns =>
+    @Html.Grid(Model).Named("DataGrid").Build(columns =>
 {
-    columns.Add(c => c.Robot).Filterable(true);
-    columns.Add(c => c.Date_Time).Format("{0:dd-MM-yyyy hh:mm}");
-    columns.Add(c => c.nDress);
-    columns.Add(c => c.nWelds);
+    columns.Add(c => c.Robot).Titled("Robot").Filterable(true);
+    columns.Add(c => c.Date_Time).Titled("Time").Formatted("{0:dd-MM-yyyy hh:mm}");
+    columns.Add(c => c.nDress).Titled("nDress");
+    columns.Add(c => c.nWelds).Titled("nWelds");
     columns.Add(c => c.pWear).Titled("%wear");
     columns.Add(c => c.nRspots).Titled("remainingSpots");
     columns.Add(c => c.nRcars).Titled("remainingCars");
-
     columns.Add(c => c.LocationTree)
     .Titled("Info")
     .Encoded(false)
-    .Sanitized(false)
-    .SetWidth(30)
     .Filterable(true)
-    .RenderValueAs(o => Html.ActionLink("INFO", "_Moreinfo")
+    .RenderedAs(o => Html.ActionLink("INFO", "_Moreinfo")
     );
 
-}).WithPaging(20).Sortable(true)
+}).Sortable().Pageable(pager =>
+    {
+    pager.RowsPerPage = 20;
+    }).Empty("No data found")
 </div>
 
 @*footer modal with filter and gohome*@
@@ -145,14 +133,14 @@
         </button>
         <ul class="dropdown-menu">
             <li><a href="/Gadata/TipstatusWebgrid">ClearFilter</a></li>
-            <li><a href="/Gadata/TipstatusWebgrid?grid-filter=LocationTree__2__GA1">GA1</a></li>
-            <li><a href="/Gadata/TipstatusWebgrid?grid-filter=LocationTree__2__A LIJN 33">-FLOOR</a></li>
-            <li><a href="/Gadata/TipstatusWebgrid?grid-filter=LocationTree__2__A LIJN 334">--FF-334</a></li>
-            <li><a href="/Gadata/TipstatusWebgrid?grid-filter=LocationTree__2__A LIJN 331">--FS-331</a></li>
-            <li><a href="/Gadata/TipstatusWebgrid?grid-filter=LocationTree__2__A LIJN 336">--RF-336</a></li>
-            <li><a href="/Gadata/TipstatusWebgrid?grid-filter=LocationTree__2__A LIJN 338">--MAR-338</a></li>
-            <li><a href="/Gadata/TipstatusWebgrid?grid-filter=LocationTree__2__A LIJN 339">--WBL-339</a></li>
-            <li><a href="/Gadata/TipstatusWebgrid?grid-filter=LocationTree__2__A LIJN 35">-SIDES</a></li>
+            <li><a href="/Gadata/TipstatusWebgrid?DataGrid-LocationTree-Contains=GA1">GA1</a></li>
+            <li><a href="/Gadata/TipstatusWebgrid?DataGrid-LocationTree-Contains=A LIJN 33">-FLOOR</a></li>
+            <li><a href="/Gadata/TipstatusWebgrid?DataGrid-LocationTree-Contains=A LIJN 334">--FF-334</a></li>
+            <li><a href="/Gadata/TipstatusWebgrid?DataGrid-LocationTree-Contains=A LIJN 331">--FS-331</a></li>
+            <li><a href="/Gadata/TipstatusWebgrid?DataGrid-LocationTree-Contains=A LIJN 336">--RF-336</a></li>
+            <li><a href="/Gadata/TipstatusWebgrid?DataGrid-LocationTree-Contains=A LIJN 338">--MAR-338</a></li>
+            <li><a href="/Gadata/TipstatusWebgrid?DataGrid-LocationTree-Contains=A LIJN 339">--WBL-339</a></li>
+            <li><a href="/Gadata/TipstatusWebgrid?DataGrid-LocationTree-Contains=A LIJN 35">-SIDES</a></li>
         </ul>
 
         <a href="~/" class="btn btn-primary">goHome &raquo;</a>
