--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -39,6 +39,11 @@
                     Layout assets (om te zien of alles gemapt is)
                 </p>
 
+                <p>
+                    <a href="~/tableau/EmbeddedDesktop?workbook=RobSensorData30D&sheet=SensorDash" class="btn btn-primary btn-sm">Gripper sensor faults &raquo;</a>
+                    Gripper sensor faults (comau test)
+                </p>
+
             </div>
         </div>
 
